<resources>
    <string name="app_name">Vahaanurja</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Fuel Details</string>
    <string name="title_activity_report">Today\'s Report</string>

    <string name="msg_internet_connection">Please Check Your Internet Connection</string>
    <string name="error_network_msg">Something Went Wrong Please Try Again!</string>

    //font family
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>

    <!--label and hints-->
    <string name="label_if_other">Other Vehicle</string>
    <string name="hint_enter_vehicle_no">Enter vehicle No</string>
    <string name="label_petrol">Petrol</string>
    <string name="label_diesel">Diesel</string>
    <string name="hint_enter_quantity_in_ltrs">Enter Quantity(ltrs.)</string>
    <string name="hint_enter_meter_reading">Enter Meter Reading</string>
    <string name="btn_text_submit">Submit</string>
    <string name="label_fuel_transaction">Fuel Transaction</string>
    <string name="label_registration_no">Registration No.</string>
    <string name="label_date">Date</string>
    <string name="label_qty_litres">Qty (Litres)</string>
    <string name="label_day_wise_report">Today\'s Report</string>
    <string name="label_username">Username</string>
    <string name="label_total">Total</string>
    <string name="label_go_to_home">Go To Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_select_site">SELECT SITE</string>
    <string name="label_submit">Submit</string>
    <string name="label_by">by</string>

    <string name="open_nfc">OPEN NFC</string>
    <string name="no_nfc">No NFC</string>


    <string name="printNormal">The printer is working normally.</string>
    <string name="printLackofpaper">The printer is out of paper</string>
    <string name="printOverpressure">The printer is overvoltage.</string>
    <string name="printOverheating">The printer is overheated.</string>
    <string name="printPressureaxisopen">Printer shaft open</string>
    <string name="printPaperstuck">Printer paper stuck</string>
    <string name="printSlicingerror">Printer cutting error</string>
    <string name="printPaperfinish">Printer paper used up</string>
    <string name="printCancelpaper">User doesnot get paper</string>
    <string name="printLeisure">Printer available.</string>
    <string name="printUnleisure">The printer data is full.</string>

</resources>
