<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cardscannertwo.ui.detail.DetailActivity"
    tools:showIn="@layout/activity_detail">


    <TextView
        android:id="@+id/card_info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_family_condensed"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vehicle_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_info_tv">

    </androidx.recyclerview.widget.RecyclerView>

    <CheckBox
        android:id="@+id/if_other_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vehicle_list_rv"
        android:fontFamily="@string/font_family_condensed"
        android:text="@string/label_if_other"
        android:textSize="@dimen/text_size_medium" />

    <LinearLayout
        android:id="@+id/if_other_cb_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/if_other_cb"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/vehicle_no_til"
            style="@style/AppTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:helperText="*Required">

            <EditText
                android:id="@+id/vehicle_no_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"

                android:fontFamily="@string/font_family_condensed"
                android:hint="@string/hint_enter_vehicle_no"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/fuel_type_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/petrol_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_condensed"
                android:text="@string/label_petrol"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />

            <RadioButton
                android:id="@+id/diesel_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_condensed"
                android:text="@string/label_diesel"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />

        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/qty_til"
        style="@style/AppTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/if_other_cb_ll"
        app:helperText="*Required">

        <EditText
            android:id="@+id/qty_no_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@string/font_family_condensed"
            android:hint="@string/hint_enter_quantity_in_ltrs"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meter_reading_til"
        style="@style/AppTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qty_til"
        app:helperText="*Required">

        <EditText
            android:id="@+id/meter_reading_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@string/font_family_condensed"
            android:hint="@string/hint_enter_meter_reading"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_mbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meter_reading_til"
        android:background="@color/colorPrimary"
        android:fontFamily="@string/font_family_condensed"
        android:text="@string/btn_text_submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

</RelativeLayout>
