<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cardscannertwo.ui.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/site_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/site_name_fl"
        android:layout_centerInParent="true"
        android:fontFamily="@string/font_family_condensed"
        android:padding="2dp"
        android:text="@string/label_select_site"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
         />


    <FrameLayout
        android:id="@+id/site_name_fl"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_spinner"
        android:padding="10dp">

        <Spinner
            android:id="@+id/site_name_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"


            />
    </FrameLayout>


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/site_name_fl"
        android:background="@color/colorPrimary"
        android:fontFamily="@string/font_family_condensed"
        android:text="@string/label_submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />
</RelativeLayout>
